--- a/Votaction_java/src/main/resources/com/example/votactiongp/hello-view.fxml
+++ b/Votaction_java/src/main/resources/com/example/votactiongp/hello-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.votactiongp.HelloController">
+<AnchorPane maxHeight="700" maxWidth="700" minHeight="500" minWidth="600" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.votactiongp.HelloController">
    <Label fx:id="LabelConnexionKo" layoutX="181.0" layoutY="120.0" />
    <Text layoutX="238.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome">
       <font>
